[BUGFIX] Fix scrolling issue on mobile devices

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -23,3 +23,16 @@ h2 {
 h3 {
     font-size: 1.8em;
 }
+
+body, html {
+    overflow: hidden;
+    height: 100%;
+}
+
+#app {
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 100%;
+    padding-bottom: 50px;
+    border: solid thin black;
+}
